<resources>

    <!-- APP -->

    <string name="app_name">Outer Space Manager</string>
    <string name="validate">Valider</string>
    <string name="create">Créer</string>

    <!-- MENUS -->

    <string name="menu_main_refresh">Rafraîchir</string>
    <string name="menu_main_disconnect">Déconnecter</string>

    <!-- ACTIVITY/FRAGMENT/ITEM : Login -->

    <string name="login_identifier_textview">Identifiant</string>
    <string name="login_identifier_edittext_hint">identifiant</string>
    <string name="login_password_textview">Mode de passe</string>
    <string name="login_password_edittext_hint">mot de passe</string>
    <string name="login_new_textview">Pas encore de compte ?</string>
    <string name="login_new_button">Créer</string>

    <!-- ACTIVITY/FRAGMENT/ITEM : Signup -->

    <string name="signup_identifier_textview">Identifiant</string>
    <string name="signup_identifier_edittext_hint">identifiant</string>
    <string name="signup_password_textview">Mot de passe</string>
    <string name="signup_password_edittext_hint">mot de passe</string>
    <string name="signup_email_textview">Courriel</string>
    <string name="signup_email_edittext_hint">name@service.mail</string>

    <!-- ACTIVITY/FRAGMENT/ITEM : Main -->

    <string name="main_show_map_button">Vue Générale</string>
    <string name="main_show_buildings_button">Bâtiments</string>
    <string name="main_show_fleet_button">Flotte</string>
    <string name="main_show_lab_button">Recherches</string>
    <string name="main_show_shipyard_button">Chantier Spatial</string>
    <string name="main_show_galaxy_button">Galaxie</string>
    <string name="main_username_textview">%1$s</string>
    <string name="main_score_textview">%1$d pts</string>
    <string name="main_minerals_imageview">minerals</string>
    <string name="main_gas_imageview">gas</string>

    <!-- ACTIVITY/FRAGMENT/ITEM : Buildings -->

    <string name="building_item_level">Lvl %1$d</string>
    <string name="building_item_gas">%1$d</string>
    <string name="building_item_mineral">%1$d</string>
    <string name="building_item_effect">%1$s : +%2$d</string>
    <string name="building_item_upgrade_total_time">UPGRADE (%1$d sec)</string>
    <string name="building_item_upgrade_remaining_time">Reste %1$d h %2$d m %3$d s</string>

    <!-- ACTIVITY/FRAGMENT/ITEM : Searches -->

    <string name="search_item_level">Lvl %1$d</string>
    <string name="search_item_gas">%1$d</string>
    <string name="search_item_mineral">%1$d</string>
    <string name="search_item_effect">%1$s : +%2$d</string>
    <string name="search_item_upgrade_total_time">UPGRADE (%1$d sec)</string>
    <string name="search_item_upgrade_remaining_time">Reste %1$d h %2$d m %3$d s</string>

    <!-- ACTIVITY/FRAGMENT/ITEM : Shipyard -->

    <string name="ship_item_life">Life : %1$d HP</string>
    <string name="ship_item_shield">Shield : %1$d HP</string>
    <string name="ship_item_attack">Attack : %1$d-%2$d HP</string>
    <string name="ship_item_speed">Speed : %1$d</string>
    <string name="ship_item_gas">Gas : %1$d</string>
    <string name="ship_item_minerals">Mineral : %1$d</string>
    <string name="ship_item_spatioport">Spatioport level needed : %1$d</string>
    <string name="ship_item_create">CONSTRUIRE x%1$d (%2$d sec)</string>
    <string name="ship_item_stats_textview">Stats</string>
    <string name="ship_item_price_textview">Prix</string>
    <string name="ship_item_amount">x%1$d (%2$d à venir)</string>

    <!-- ACTIVITY/FRAGMENT/ITEM : Galaxy -->



    <!-- API -->

    <string name="toast_infirm_create_default">Création impossible !</string>
    <string name="toast_infirm_response_null">Réponse «null» …</string>

    <!-- API : User -->

    <string name="toast_confirm_create_user">Compte « %1$s » créé !</string>
    <string name="toast_confirm_fetch_user_token">%1$s est connecté</string>
    <string name="toast_confirm_fetch_user">Données de %1$s synchronisées</string>
    <string name="toast_cancel_create_user">Inscription annulée</string>
    <string name="toast_infirm_create_user_exception">Création de compte impossible (%1$s)</string>
    <string name="toast_infirm_create_user_apimessage">Création de compte impossible (%1$s)</string>
    <string name="toast_infirm_create_user_default">Création de compte impossible</string>
    <string name="toast_infirm_fetch_user_token_apimessage">Connexion impossible (%1$s)</string>
    <string name="toast_infirm_fetch_user_token_exception">Connexion impossible (%1$s)</string>
    <string name="toast_infirm_fetch_user_token_default">Connexion impossible</string>
    <string name="toast_infirm_fetch_user_apimessage">Synchronisation des données de %1$s impossible (%2$s)</string>
    <string name="toast_infirm_fetch_user_exception">Synchronisation des données de %1$s impossible (%2$s)</string>
    <string name="toast_infirm_fetch_user_default">Synchronisation des données de %1$s impossible</string>

    <!-- API : Building -->

    <string name="toast_confirm_upgrade_building">Amélioration lancée !</string>
    <string name="toast_confirm_fetch_buildings">Données des bâtiments synchronisées</string>
    <string name="toast_infirm_upgrade_building_apimessage">Amélioration impossible (%1$s)</string>
    <string name="toast_infirm_upgrade_building_exception">Amélioration impossible (%1$s)</string>
    <string name="toast_infirm_upgrade_building_default">Les données des bâtiments n\'ont pu être récupérées</string>
    <string name="toast_infirm_upgrade_building_not_found">Ce bâtiment n\'existe pas</string>
    <string name="toast_infirm_upgrade_building_invalid_request">Requête invalide</string>
    <string name="toast_infirm_upgrade_building_in_queue">Ce bâtiment est déjà en cours d\'amélioration</string>
    <string name="toast_infirm_upgrade_building_not_enough_resources">Pas assez de ressources</string>
    <string name="toast_infirm_upgrade_building_invalid_token">Authentification du joueur impossible</string>
    <string name="toast_infirm_upgrade_building_bad_response">Le serveur n\'a pas pu traîter la requête</string>
    <string name="toast_infirm_upgrade_building_internal_error">Une erreur serveur est survenue</string>
    <string name="toast_infirm_fetch_buildings_exception">Les données des bâtiments n\'ont pu être récupérées (%1$s)</string>
    <string name="toast_infirm_fetch_buildings_apimessage">Les données des bâtiments n\'ont pu être récupérées (%1$s)</string>
    <string name="toast_infirm_fetch_buildings_default">Les données des bâtiments n\'ont pu être récupérées</string>

    <!-- API : Ship -->

    <string name="toast_infirm_fetch_ships">Les données des vaisseaux n\'ont pu être récupérées</string>
    <string name="toast_infirm_create_ship_message">Construction impossible (%1$s)</string>
    <string name="toast_infirm_create_ship_not_found">Ce vaisseau n\'existe pas</string>
    <string name="toast_infirm_create_ship_invalid_request">Requête invalide</string>
    <string name="toast_infirm_create_ship_in_queue">Ce vaisseau est déjà en cours d\'amélioration</string>
    <string name="toast_infirm_create_ship_not_enough_resources">Pas assez de ressources</string>
    <string name="toast_infirm_create_ship_invalid_token">Authentification du joueur impossible</string>
    <string name="toast_infirm_create_ship_bad_response">Le serveur n\'a pas pu traîter la requête</string>
    <string name="toast_infirm_create_ship_internal_error">Une erreur serveur est survenue</string>

    <!-- API : Search -->

    <string name="toast_confirm_upgrade_search">Amélioration lancée !</string>
    <string name="toast_confirm_fetch_searches">Données des recherches synchronisées</string>
    <string name="toast_infirm_upgrade_search_apimessage">Amélioration impossible (%1$s)</string>
    <string name="toast_infirm_upgrade_search_exception">Amélioration impossible (%1$s)</string>
    <string name="toast_infirm_upgrade_search_default">Les données des recherches n\'ont pu être récupérées</string>
    <string name="toast_infirm_upgrade_search_not_found">Ce bâtiment n\'existe pas</string>
    <string name="toast_infirm_upgrade_search_invalid_request">Requête invalide</string>
    <string name="toast_infirm_upgrade_search_in_queue">Ce bâtiment est déjà en cours d\'amélioration</string>
    <string name="toast_infirm_upgrade_search_not_enough_resources">Pas assez de ressources</string>
    <string name="toast_infirm_upgrade_search_invalid_token">Authentification du joueur impossible</string>
    <string name="toast_infirm_upgrade_search_bad_response">Le serveur n\'a pas pu traîter la requête</string>
    <string name="toast_infirm_upgrade_search_internal_error">Une erreur serveur est survenue</string>
    <string name="toast_infirm_fetch_searches_exception">Les données des recherches n\'ont pu être récupérées (%1$s)</string>
    <string name="toast_infirm_fetch_searches_apimessage">Les données des recherches n\'ont pu être récupérées (%1$s)</string>
    <string name="toast_infirm_fetch_searches_default">Les données des recherches n\'ont pu être récupérées</string>
    <string name="building_item_icon_imageview_description">building icon</string>
    <string name="building_item_amount_one_button">x1</string>
    <string name="building_item_amount_ten_button">x10</string>
    <string name="building_item_amount_hundred_button">x100</string>
    <string name="building_item_amount_max_button">max</string>
    <string name="building_item_amount_zero_button">0</string>
    <string name="building_item_amount_minus_hundred_button">-100</string>
    <string name="building_item_amount_minus_ten_button">-10</string>
    <string name="building_item_amount_minus_one_button">-1</string>
    <string name="building_item_amount_plus_one_button">+1</string>
    <string name="building_item_amount_plus_ten_button">+10</string>
    <string name="building_item_amount_plus_hundred_button">+100</string>
    <string name="building_item_amount_textview">Quantité :</string>
    <string name="ships_item_max_togglebutton">Max</string>
    <string name="ships_item_max_on_togglebutton">Max</string>
    <string name="ships_item_max_off_togglebutton">Manuel</string>
    <string name="zero_button_method">set</string>
    <string name="ships_amount_zero_button_method">set</string>
    <string name="ships_amount_minus_hundred_button_method">minus</string>
    <string name="ships_amount_minus_ten_button_method">minus</string>
    <string name="ships_amount_minus_one_button_method">minus</string>
    <string name="ships_amount_plus_one_button_method">plus</string>
    <string name="ships_amount_plus_ten_button_method">plus</string>
    <string name="ships_amount_plus_hundred_button_method">plus</string>
    <string name="amount_method_set">set</string>

</resources>
