<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:outerSpaceManager="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="lamit.outerspacemanager.com.outerspacemanager.ui.activity.LoginActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/signup_loginrow_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/signup_login_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/signup_identifier_textview"/>

        <EditText
            android:id="@+id/signup_login_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_identifier_edittext_hint" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/signup_passwordrow_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/signup_password_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/signup_password_textview"/>

        <EditText
            android:id="@+id/signup_password_edittext"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_password_edittext_hint" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/signup_emailrow_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/signup_email_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/signup_email_textview"/>

        <EditText
            android:id="@+id/signup_email_edittext"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_email_edittext_hint" />

    </LinearLayout>

    <Button
        android:id="@+id/signup_validate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/create"/>

</LinearLayout>

