<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="lamit.outerspacemanager.com.outerspacemanager.ui.activity.MainActivity">

    <TextView
        android:id="@+id/main_username_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/main_username_textview"
        android:gravity="center"
        android:textSize="48sp"/>

    <TextView
        android:id="@+id/main_score_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/main_score_textview"
        android:gravity="center"
        android:textSize="16sp"/>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="0,1"
        android:layout_marginTop="@dimen/main_resources_marginTop">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/minerals_imageview_side"
                android:layout_height="@dimen/minerals_imageview_side"
                android:contentDescription="@string/main_minerals_imageview"
                android:src="@drawable/minerals" />

            <ImageView
                android:layout_width="@dimen/gas_imageview_side"
                android:layout_height="@dimen/gas_imageview_side"
                android:contentDescription="@string/main_gas_imageview"
                android:src="@drawable/gas" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/main_minerals_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:text="xxxxx"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/main_gas_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:gravity="center"
                tools:text="xxxxx"
                android:textSize="16sp" />
        </TableRow>

    </TableLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2">

    </GridLayout>

    <Button
        android:id="@+id/main_buildings_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_buttons_marginTop"
        android:text="@string/main_show_buildings_button"/>

    <Button
        android:id="@+id/main_lab_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_show_lab_button"/>

    <Button
        android:id="@+id/main_shipyard_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_show_shipyard_button"/>

    <Button
        android:id="@+id/main_galaxy_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_show_galaxy_button"/>

</LinearLayout>